--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -80,21 +80,59 @@
   position: fixed;
 }
 
-#mobile-nav-pop-up-container {
+/* .mobile-nav-pop-up-bg {
+  overflow-y: auto;
+  height: 100%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* overflow-y: auto; */
+
+/* #mobile-nav-pop-up-container {
   background: #14001b;
   width: 100vw;
   height: 100vh;
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   position: absolute;
   top: 0;
-  right: 30px;
+  right: -10px;
   gap: 50px;
   padding-bottom: 10px;
   z-index: 3000;
+} */
+
+.mobile-nav-pop-up-bg {
+  position: absolute;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  top: 0;
+  right: -10px;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
+  z-index: 3000;
+  overscroll-behavior: contain;
+}
+
+#mobile-nav-pop-up-container {
+  background: #14001b;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 50px;
+  padding-bottom: 10px;
+}
+
+body.mobile-nav-open {
+  overflow: hidden;
 }
 
 #mobile-nav-pop-up-links-container {
